@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: biff.cc,v $
-// Revision      : $Revision: 1.24 $
-// Revision date : $Date: 2005/01/18 13:54:12 $
+// Revision      : $Revision: 1.25 $
+// Revision date : $Date: 2005/01/18 21:26:33 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -237,13 +237,13 @@ Biff::popup_format (std::string format)
  *  @returns        Boolean indicating if a mail exists or not.
  */
 gboolean 
-Biff::find_mail (std::string mailid, struct header_ &mail)
+Biff::find_mail (std::string mailid, Header &mail)
 {
 	gboolean ok = false;
 
 	g_mutex_lock (mutex_);
 	for (guint i=0; (i < mailbox_.size()) && !ok; i++)
-		if (mailbox_[i]->find_mail (mailid, (header &)mail))
+		if (mailbox_[i]->find_mail (mailid, mail))
 			ok = true;
 	g_mutex_unlock (mutex_);
 
